plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = "${project.version}+${project.minecraft_version}"
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven {
		url = 'https://maven.shedaniel.me/'
	}
	maven {
		url = 'https://maven.terraformersmc.com/'
	}
}

loom {
	accessWidenerPath = file("src/main/resources/corners.accesswidener")
	splitEnvironmentSourceSets()

	mods {
		"corners" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	modImplementation "com.terraformersmc:modmenu:${project.terraformersmc_menu_version}"
    modImplementation include("net.ludocrypt:limlib:${project.limlib_version}")
    modImplementation include("net.ludocrypt:specialmodels:${project.specialmodels_version}")
    modImplementation include("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}")
}

processResources {
	inputs.property "version", version

	filesMatching('fabric.mod.json') {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	it.options.release = 21
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21

	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${archivesBaseName}" }
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	repositories {
	}
}
